Fix empty space on overflow change

--- a/app/templates/files/src/web/components/bin-catalog-breadcrumb/bin-catalog-breadcrumb.less
+++ b/app/templates/files/src/web/components/bin-catalog-breadcrumb/bin-catalog-breadcrumb.less
@@ -11,6 +11,7 @@ bin-catalog-breadcrumb {
     margin: 0;
     overflow: hidden;
     white-space: nowrap;
+    vertical-align: top;
     text-overflow: ellipsis;
   }
 }
